--- a/eww/eww.scss
+++ b/eww/eww.scss
@@ -2,6 +2,24 @@
   all: unset;
 }
 
+// .notifications {
+//   min-height: 0px;
+//   background-color: transparent;
+// }
+
+// .notif {
+//   background-color: #282828;
+//   margin-bottom: 10px;
+//   padding: 10px;
+//   border-radius: 10px;
+//   border-width: 2;
+//   border-color: #fabd2f;
+// }
+
+// .notif image {
+//   padding-right: 10px;
+// }
+
 .bar {
   box-shadow: 0 2px 3px 1px rgba(6, 6, 11, 0.9);
   border-radius: 18px;
@@ -10,8 +28,9 @@
   margin: 6.5px;
 }
 
+
 .menu {
-  margin-left: 12px;
+  margin-left: 20px;
 }
 
 .menu-eventbox {
@@ -397,26 +416,6 @@ menu {
   color: rgb(205, 212, 246);
 }
 
-.minicore-container {
-  margin-top: 20px;
-  margin-bottom: 5px;
-}
-
-.minicores {
-  padding: 7px;
-}
-
-.C0,
-.C1,
-.C2,
-.C3 {
-  margin: 0px 7px;
-  padding: 10px;
-  border-radius: 15px;
-  box-shadow: 0 2px 3px 2px rgba(6, 6, 11, 0.9);
-  background-color: rgba(0, 0, 0, 0.28);
-  color: #88C0D0;
-}
 
 .ctlpanel {
   min-width: 230px;
