--- a/waybar/style.css
+++ b/waybar/style.css
@@ -1,4 +1,4 @@
-@import "/home/iuno/config/cache/wal/colors-waybar.css";
+/* @import "/home/iuno/config/cache/wal/colors-waybar.css"; */
 
 * {
     font-family: "JetBrainsMono Nerd Font";
@@ -54,6 +54,8 @@ tooltip {
     padding: 0 100px;
 }
 
+#custom-battery,
+#custom-dnd,
 #custom-menu,
 #tray,
 #bluetooth,
@@ -66,13 +68,16 @@ tooltip {
     padding: 0 10px;
 }
 
+#custom-battery:hover,
+#custom-dnd:hover,
 #custom-menu:hover,
 #bluetooth:hover,
 #network:hover,
 #battery:hover,
 #pulseaudio:hover,
 #clock:hover {
-    background-color: alpha(@select, 0.6);
+    background-color: rgba(128, 128, 128, 0.6);
+    /* background-color: alpha(@select, 0.6); */
 }
 
 #bluetooth {
